# quickjs-wrapper

./: .project  CHANGELOG.md  CMakeLists.txt  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build-native.yml  publish.yml
native/cpp/: quickjs_buffer_reader.cpp  quickjs_context_jni.cpp  quickjs_extend_libraries.h  quickjs_wrapper.cpp  quickjs_wrapper.h
native/win32_compat/sys/: time.h
wrapper-java/: .classpath  .project  README.md  build.gradle
wrapper-java/src/main/: CMakeLists.txt
wrapper-java/src/main/java/com/whl/quickjs/wrapper/: QuickJSContext.java  QuickJSException.java  QuickJSNativeLoader.java
wrapper-java/src/main/resources/native/macos-arm64/: libquickjs-java-wrapper.dylib
wrapper-java/src/main/resources/native/macos-x86_64/: libquickjs-java-wrapper.dylib
